--- a/public/locales/en/proyect.json
+++ b/public/locales/en/proyect.json
@@ -7,5 +7,7 @@
     "titulo-crypto": "Cryptocurrency Quotation Tool",
     "descripcion-crypto": "🎯 Key Features: -Real-time quotes: Allows users to check the current price of the top 20 cryptocurrencies in the market. -User-friendly interface: Designed with React, ensuring a smooth and attractive user experience.",
     "titulo-portfolio": "Personal Portfolio",
-    "descripcion-portfolio": "🎯 Key Features: -Responsive design: Adaptable to different devices and screen sizes, ensuring an optimal user experience on mobile devices and tablets. -Interactivity: Utilizes React and Tailwind CSS for smooth and attractive navigation."
+    "titulo-coctail":"Drink finder",
+    "descripcion-portfolio": "🎯 Key Features: -Responsive design: Adaptable to different devices and screen sizes, ensuring an optimal user experience on mobile devices and tablets. -Interactivity: Utilizes React and Tailwind CSS for smooth and attractive navigation.",
+    "descripcion-coctail":"🎯 Main features: A web application designed to search for drinks or beverages that can be consumed in everyday life, both alcoholic and non-alcoholic. AI implementation: A chat is implemented, which provides you with drinks with the ingredients you provide."
 }
